--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "superagent": "~0.15.7",
-    "graphviz": "0.0.8"
+    "graphviz": "0.0.8",
+    "electron": "~0.4.0"
   }
 }
