--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depviz",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Quick and dirty module dependency visualization with Graphviz.",
   "main": "./lib/depviz.js",
   "homepage": "https://github.com/vesln/depviz",
   "scripts": {
