--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "superagent": "~0.15.7",
     "graphviz": "0.0.8",
-    "electron": "~0.4.0"
+    "electron": "~0.4.0",
+    "sherlock": "~1.0.0"
   }
 }
